--- a/src/app/sign-up-form/login/login.component.html
+++ b/src/app/sign-up-form/login/login.component.html
@@ -29,7 +29,7 @@
                      name="pswd"
                      formControlName="pswd"
                   />
-                  <p *ngIf="logincontent.pswd.invalid && logincontent.pswd.dirty">
+                  <p *ngIf="logincontent.pswd.invalid && logincontent.pswd.dirty" class="alert alert-danger">
                      Please Enter valid password!
                   </p>
                </li>
