--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -50,55 +50,9 @@
                <a class="dropdown-item" href="#">Something else here</a>
             </div>
          </li>
-         <!-- <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-         </li> -->
       </ul>
       <form class="form-inline my-2 my-lg-0">
-         <a routerLink="/signup" class="btn text-white rounded-2 btn-danger my-2 my-sm-0" type="button"
-            >Signup</a
-         >
+         <a routerLink="/signup" class="btn text-white rounded btn-danger my-2 my-sm-0" type="button">Signup</a>
       </form>
    </div>
 </nav>
-
-<!-- <div class=" mt-1">
-   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-         <div class="carousel-item active">
-            <img
-               src="https://cdn.goodlayers.com/hotelmaster/dark/wp-content/uploads/2015/04/slider-1.jpg"
-               class="d-block w-100"
-               alt="..."
-            />
-         </div>
-         <div class="carousel-item">
-            <img
-               src="https://cdn.goodlayers.com/hotelmaster/dark/wp-content/uploads/2015/04/slider-31.jpg"
-               class="d-block w-100"
-               alt="..."
-            />
-         </div>
-         <div class="carousel-item">
-            <img
-               src="https://cdn.goodlayers.com/hotelmaster/dark/wp-content/uploads/2015/04/slider-21.jpg"
-               class="d-block w-100"
-               alt="..."
-            />
-         </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-         <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-         <span class="sr-only">Next</span>
-      </a>
-   </div>
-</div> -->
