--- a/src/app/weather-app/weather-app.component.html
+++ b/src/app/weather-app/weather-app.component.html
@@ -1,53 +1,46 @@
 <div class="github-details">
-  <div class="row">
-     <div class="col-md-12">
-        <div class="todo-heading bg-primary text-white  text-center">
-           <h2 class="font-weight-bold m-0 p-3">Welcome to Weather App</h2>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="todo-heading bg-primary text-white  text-center">
+                <h2 class="font-weight-bold m-0 p-3">Welcome to Weather App</h2>
+            </div>
         </div>
-     </div>
-  </div>
-  <form>
-     <div class="form-group">
-        <div class="input-group mb-3 mt-3">
-           <input
-              class="form-control rounded-0"
-              autofocus
-              name="usernames"
-              placeholder="Enter pin code..."
-              type="text"
-              [(ngModel)]="weatherInput"
-           />
-           <div class="input-group-append">
-              <button
-                 class="btn text-white btn-success rounded-0"
-                 id="button-addon2"
-                 type="button" (click)="submitData(weatherInput)"
-              >
-                 Get Details
-              </button>
-           </div>
+    </div>
+    <form>
+        <div class="form-group">
+            <div class="input-group mb-3 mt-3">
+                <input class="form-control rounded-0" autofocus name="usernames" placeholder="Enter pin code..." type="text" [(ngModel)]="weatherInput" />
+                <div class="input-group-append">
+                    <button class="btn text-white btn-success rounded-0" id="button-addon2" type="button" (click)="submitData(weatherInput)">
+                  Get Details
+               </button>
+                </div>
+            </div>
         </div>
-     </div>
-  </form>
+    </form>
 </div>
 
 <div class="gitdata">
-      <span class="alert alert-danger mx-auto mt-3 w-50 d-block" *ngIf="!datacontentShow">Please enter pin code...</span>
-      <div class="weather-content-inner shadow mx-5 mb-3 mt-5 border" *ngIf="datacontentShow">
-         <div class="card-header d-flex">
-            <img src="" alt="not here">
-            <h5>Country</h5>
-         </div>
-         <div class="cards-temp p-3">
-            <div class="card" style="width:130px" *ngFor="let i of datafetch;">
-               <div class="card-box">
-                  <img class="card-img-top" src="http://openweathermap.org/img/w/{{i.weather[0].icon}}.png" alt="{{i.weather[0].icon}}" width="30"/>
-               </div>
-               <div class="card-body text-center">
-                  <h6 class="card-title m-0">{{i.dt_txt}}
-                  </h6>
-               </div>
-            </div>
-         </div>
-      </div>
+    <span class="alert alert-danger mx-auto mt-3 w-50 d-block" *ngIf="!datacontentShow">Please enter pin code...</span
+   >
+   <!-- <div class="loader"   *ngIf="loader"></div> -->
+   <div class="weather-content-inner shadow mx-5 mb-3 mt-5 border" *ngIf="datacontentShow">
+      <div class="main-content" *ngIf="loader">
+         <div class="card-header">
+            <img src="http://openweathermap.org/images/flags/{{ country_flag | lowercase }}.png" alt="not here" />
+            <span>&nbsp; {{ city_name }}</span>
+</div>
+<div class="cards-temp p-3">
+    <div class="card" style="width:130px" *ngFor="let i of datafetch">
+        <div class="card-box">
+            <img class="card-img-top" src="http://openweathermap.org/img/w/{{ i.weather[0].icon }}.png" alt="{{ i.weather[0].icon }}" width="30" />
+        </div>
+        <div class="card-body text-center">
+            <h6 class="card-title m-0">{{ i.dt | date }}</h6>
+        </div>
+    </div>
+</div>
+</div>
+<div class="loader" *ngIf="!loader">Loading...</div>
+</div>
 </div>
