--- a/src/app/weather-app/weather-app.component.less
+++ b/src/app/weather-app/weather-app.component.less
@@ -1,44 +1,44 @@
 .github-details {
-    width: 50%;
-    margin: 50px auto 0;
-    padding: 20px;
-    background: #f2f2f2;
-    border-radius: 4px;
-    box-shadow: 0 4px 6px 5px rgba(0, 0, 0, 0.1);
- }
- .github-details .card {
-    margin: 0 auto;
- }
- 
- .card-box {
-    margin: 10px auto 0;
- }
- .card-box img {
-    height: 40px;
-    width: 40px;
-    border-radius: 50%;
-    transition: 0.3s ease-in-out;
-    cursor: pointer;
- }
- .card-box img:hover {
-    transform: scale(1.2);
- }
- .userList {
-    position: absolute;
-    left: 8px;
-    top: 150px;
- }
- .userList > h4 {
-    font-size: 18px;
-    color: #9e9b9b;
-    font-weight: 700;
-    text-transform: uppercase;
- }
- .cards-temp {
+   width: 50%;
+   margin: 50px auto 0;
+   padding: 20px;
+   background: #f2f2f2;
+   border-radius: 4px;
+   box-shadow: 0 4px 6px 5px rgba(0, 0, 0, 0.1);
+}
+.github-details .card {
+   margin: 0 auto;
+}
+
+.card-box {
+   margin: 10px auto 0;
+}
+.card-box img {
+   height: 40px;
+   width: 40px;
+   border-radius: 50%;
+   transition: 0.3s ease-in-out;
+   cursor: pointer;
+}
+.card-box img:hover {
+   transform: scale(1.2);
+}
+.userList {
+   position: absolute;
+   left: 8px;
+   top: 150px;
+}
+.userList > h4 {
+   font-size: 18px;
+   color: #9e9b9b;
+   font-weight: 700;
+   text-transform: uppercase;
+}
+.cards-temp {
    display: flex;
    flex-wrap: wrap;
-   justify-content: space-between
+   justify-content: space-between;
 }
-.cards-temp > div{
+.cards-temp > div {
    margin: 10px;
 }
