--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,58 +1,41 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-info">
-   <a class="navbar-brand text-white" href="#">Naseem</a>
-   <button
-      class="navbar-toggler"
-      type="button"
-      data-toggle="collapse"
-      data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-   >
+    <a class="navbar-brand text-white" href="#">Naseem</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
    </button>
 
-   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-         <li class="nav-item active" routerLinkActive="current">
-            <a class="nav-link text-white" routerLink="/calculator"
-               >Calculator <span class="sr-only">(current)</span></a
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active" routerLinkActive="current">
+                <a class="nav-link text-white" routerLink="/calculator">Calculator <span class="sr-only">(current)</span></a
             >
          </li>
          <li class="nav-item">
             <a class="nav-link text-white" routerLink="/todoapp2">TodoApp2</a>
-         </li>
-         <li class="nav-item">
-            <a class="nav-link text-white" routerLink="/gitinfo">GitInfo</a>
-         </li>
-         <li class="nav-item">
-            <a class="nav-link text-white" routerLink="/weather">WeatherApp</a>
-         </li>
-         <li class="nav-item">
-            <a class="nav-link text-white" routerLink="/heroes">HeroesApp</a>
-         </li>
-         <li class="nav-item dropdown">
-            <a
-               class="nav-link dropdown-toggle text-white"
-               href="#"
-               id="navbarDropdown"
-               role="button"
-               data-toggle="dropdown"
-               aria-haspopup="true"
-               aria-expanded="false"
-            >
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-white" routerLink="/gitinfo">GitInfo</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-white" routerLink="/weather">WeatherApp</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-white" routerLink="/heroes">HeroesApp</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                Products
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-               <a class="dropdown-item" href="#">Action</a>
-               <a class="dropdown-item" href="#">Another action</a>
-               <div class="dropdown-divider"></div>
-               <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-         </li>
-      </ul>
-      <form class="form-inline my-2 my-lg-0">
-         <a routerLink="/signup" class="btn text-white rounded btn-danger my-2 my-sm-0" type="button">Signup</a>
-      </form>
-   </div>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+            </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+            <a routerLink="/signup" class="btn text-white rounded btn-danger my-2 my-sm-0" type="button"><i class="fa fa-user" aria-hidden="true"></i> Signup</a>
+        </form>
+    </div>
 </nav>
