--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,3 +8,8 @@
 <!-- <app-sign-up-form></app-sign-up-form> -->
 
 <router-outlet></router-outlet>
+
+
+<ul>
+    <li *ngFor="let course of courses;">{{course.$value}}</li>
+</ul>
