--- a/src/app/sign-up-form/sign-up-form.component.html
+++ b/src/app/sign-up-form/sign-up-form.component.html
@@ -1,11 +1,10 @@
-
-<div *ngIf="!this.check" class="container register">
+<div *ngIf="!check" class="container register">
     <div class="row">
         <div class="col-md-3 register-left">
             <img src="https://image.ibb.co/n7oTvU/logo_white.png" alt="" />
             <h3>Welcome</h3>
             <p>You are 30 seconds away from earning your own money!</p>
-            <input (click)="login($event)" type="submit" name="" value="Login" /><br />
+            <input (click)="login()" type="submit" name="" value="Login" /><br />
         </div>
         <div class="col-md-9 register-right">
             <form [formGroup]="registerDetails" class="row register-form" (ngSubmit)="postData()">
@@ -122,7 +121,5 @@
     </div>
 </div>
 
-{{message}}
-
 <!-- Login form -->
-<app-login (childEvent)="this.check = $event" [parentData]="check" *ngIf="this.check"></app-login>
+<app-login (childEvent)="check = $event" [parentData]="check" *ngIf="check"></app-login>
