--- a/src/app/city-details/city-data-list/city-data-list.component.less
+++ b/src/app/city-details/city-data-list/city-data-list.component.less
@@ -1,11 +1,17 @@
-ul {
-    box-shadow: 0 2px 9px 2px rgba(0,0,0,0.1);
-    border-radius: 4px;
-    padding: 20px;
+
+  .show-data-table {
+    width: 100%;
     margin: 0;
-    li:not(:last-child){
-      margin-bottom: 10px;
-      padding-bottom: 10px;
-      border-bottom: 1px solid #ddd;
+    box-shadow: 0 3px 12px 1px rgba(0,0,0,0.1);
+    border-radius: 4px;
+    .edit-delete i:first-child {
+        color: #46e662;
+        padding: 0 15px 0 0;
     }
-  }
+    .edit-delete i:last-child {
+        color: #e62121;
+    }
+    .edit-delete i{
+        cursor: pointer;
+    }
+}
